Fix toggle icon alignment and sub menu width

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -106,7 +106,10 @@ html {
     }
 
     .g-menu-toggle .g-menu-icon {
+        bottom: unset;
         padding: 1em;
+        top: 50%;
+        transform: translateY(-50%);
     }
 }
 
@@ -140,6 +143,7 @@ html {
         min-width: 10em;
         position: absolute;
         top: 100%;
+        white-space: nowrap;
         z-index: 1;
     }
 
